Fix display of icons on small displays

--- a/src/assets/sass/layout/_header.scss
+++ b/src/assets/sass/layout/_header.scss
@@ -173,6 +173,12 @@
 			}
 		}
 
+		@include breakpoint(xsmall) {
+			.icons {
+				display: none;
+			}
+		}
+
 		@include breakpoint(small) {
 			height: 2.75em;
 			line-height: 2.75em;
